# g3d-api-layer

./: CMakeLists.txt  README.md
G3DBase/: CMakeLists.txt  g3d-defines.h  g3d-device-resource.h  vk-resource-helpers.h
G3DExecution/: CMakeLists.txt
G3DExecution/Factory/Implementation/: g3d-command-list-factory-vk.cpp  g3d-command-list-factory-vk.h  g3d-executor-factory-vk.cpp  g3d-executor-factory-vk.h
G3DExecution/Factory/Interface/: g3d-command-list-factory.h  g3d-executor-factory.h
G3DExecution/Object/Implementation/: g3d-command-list-allocator-vk.cpp  g3d-command-list-allocator-vk.h  g3d-command-list-vk.h  g3d-executor-frame-info-vk.h  g3d-executor-vk.cpp  g3d-executor-vk.h
G3DExecution/Object/Interface/: g3d-command-list-allocator.h  g3d-executor-frame-info.h  g3d-executor.h
G3DPipelineConfig/: CMakeLists.txt
G3DPipelineConfig/Factory/Implementation/: g3d-render-pipeline-factory-vk.cpp
G3DPipelineConfig/Object/Implementation/: g3d-render-pipeline-vk.cpp
G3DPipelineConfig/Object/Interface/: g3d-render-pipeline.h  g3d-resource-set.h
G3DSystem/: CMakeLists.txt
G3DSystem/Factory/Implementation/: g3d-system-factory-vk.h
G3DSystem/Include/: g3d-vk-system.h
G3DSystem/Object/Implementation/: g3d-application-vk.h
Include/: g3d-api-layer.h
Source/: CMakeLists.txt
Source/G3DBase/: CMakeLists.txt  vk-resource-helpers.cpp  vk-resource-helpers.h
Source/G3DExecution/: CMakeLists.txt
Source/G3DExecution/Factory/Implementation/: g3d-execution-factory-vk.cpp  g3d-execution-factory-vk.h
Source/G3DExecution/Factory/Interface/: g3d-execution-factory.h
Source/G3DExecution/Object/Implementation/: g3d-command-list-allocator-vk.h  g3d-command-list-vk.cpp  g3d-executor-render-target-info-vk.h  g3d-executor-vk.cpp
Source/G3DExecution/Object/Interface/: g3d-command-list-allocator.h  g3d-executor-render-target-info.h
Source/G3DPipelineConfig/Factory/Implementation/: g3d-render-pipeline-factory-vk.h
Source/G3DPipelineConfig/Factory/Interface/: g3d-render-pipeline-factory.h
Source/G3DPipelineConfig/Object/Implementation/: g3d-render-pipeline-vk.h  g3d-resource-set-vk.cpp  g3d-resource-set-vk.h
Source/G3DResources/: CMakeLists.txt
Source/G3DResources/Factory/Implementation/: g3d-resource-factory-vk.cpp  g3d-resource-factory-vk.h
Source/G3DResources/Object/Implementation/: g3d-buffer-vk.h  g3d-image-view-vk.h  g3d-image-vk.h  g3d-sampler-vk.cpp
Source/G3DResources/Object/Interface/: g3d-image-view.h
Source/G3DSystem/: CMakeLists.txt
Source/G3DSystem/Factory/Implementation/: g3d-system-factory-vk.cpp
Source/G3DSystem/Factory/Interface/: g3d-system-factory.h
Source/G3DSystem/Object/Implementation/: g3d-application-vk.cpp  g3d-device-vk.cpp
Source/G3DWindowing/: CMakeLists.txt
Source/G3DWindowing/Factory/Implementation/: g3d-render-window-factory-vk.cpp  g3d-render-window-factory-vk.h
Source/G3DWindowing/Object/Implementation/: g3d-render-window-vk.cpp  g3d-render-window-vk.h
Source/G3DWindowing/Object/Interface/: g3d-render-window.h
include/: g3d-api-layer.h
source/: CMakeLists.txt
source/G3DBase/: g3d-defines.h  vk-resource-helpers.cpp
source/G3DExecution/: CMakeLists.txt
source/G3DExecution/include/: g3d-execution.h
source/G3DExecution/include/g3d-execution/: g3d-command-list.h  g3d-executor-vk.h  g3d-executor.h
source/G3DExecution/src/: g3d-command-list-allocator-vk.cpp  g3d-command-list-vk.cpp  g3d-execution-factory-vk.cpp  g3d-executor-vk.cpp
source/G3DPipelineConfig/: CMakeLists.txt
source/G3DPipelineConfig/include/: g3d-pipeline-config.h
source/G3DPipelineConfig/include/g3d-pipeline-config/: g3d-compute-pipeline-vk.h  g3d-compute-pipeline.h  g3d-pipeline-factory-vk.h  g3d-pipeline-factory.h  g3d-pipeline.h  g3d-render-pipeline-vk.h  g3d-render-pipeline.h  g3d-resource-set-vk.h  g3d-resource-set.h
source/G3DPipelineConfig/src/: g3d-compute-pipeline-vk.cpp  g3d-pipeline-factory-vk.cpp  g3d-render-pipeline-vk.cpp  g3d-resource-set-vk.cpp
source/G3DResources/: CMakeLists.txt
source/G3DResources/include/: g3d-resource.h
source/G3DResources/include/g3d-resource/: g3d-buffer-view-vk.h  g3d-buffer-vk.h  g3d-image-view-vk.h  g3d-image-vk.h  g3d-image.h  g3d-resource-factory-vk.h  g3d-resource-factory.h  g3d-sampler-vk.h  g3d-sampler.h
source/G3DResources/src/: g3d-buffer-view-vk.cpp  g3d-buffer-vk.cpp  g3d-image-view-vk.cpp  g3d-image-vk.cpp  g3d-resource-factory-vk.cpp  g3d-sampler-vk.cpp
source/G3DSystem/: CMakeLists.txt
source/G3DSystem/include/: g3d-system.h
source/G3DSystem/include/g3d-system/: g3d-application.h  g3d-device-vk.h  g3d-device.h
source/G3DSystem/src/: g3d-application-vk.cpp  g3d-device-vk.cpp  g3d-system-factory-vk.cpp
source/G3DWindowing/: CMakeLists.txt
source/G3DWindowing/include/: g3d-windowing.h
source/G3DWindowing/include/g3d-windowing/: g3d-render-window-factory-vk.h  g3d-render-window-vk.h
source/G3DWindowing/src/: g3d-render-window-factory-vk.cpp  g3d-render-window-vk.cpp
(+16 files in other folders)
